--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,5 +4,5 @@ include requirements.txt
 recursive-exclude tests *
 recursive-exclude * __pycache__ *
 recursive-exclude * *.py[cod]
-recursive-include simplemqtt *.py
-include simplemqtt/py.typed
+recursive-include jmqtt *.py
+include jmqtt/py.typed
